--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,9 @@
       <% if (user.bio) { %>
         <div class="panel-body"><%= user.bio %></div>
         <% } %>
+        <% if (user.profilePicture) { %>
+          <img src="/<%= user.profilePicture %>">
+        <% } %>
 
         <% if (!user.portfolio[0]) { //if there's no portfolio %>
 
